--- a/src/main/app/mule-deploy.properties
+++ b/src/main/app/mule-deploy.properties
@@ -1,6 +1,6 @@
 #** GENERATED CONTENT ** Mule Application Deployment Descriptor
-#Thu Jan 18 14:21:55 CST 2018
+#Thu Jan 18 15:13:45 CST 2018
 redeployment.enabled=true
 encoding=UTF-8
-config.resources=exercise1.xml
+config.resources=exercise1.xml,exercise2.xml
 domain=default
