--- a/src/main/app/mule-deploy.properties
+++ b/src/main/app/mule-deploy.properties
@@ -1,6 +1,6 @@
 #** GENERATED CONTENT ** Mule Application Deployment Descriptor
-#Sat Jan 20 09:57:51 CST 2018
+#Mon Jan 22 11:21:05 CST 2018
 redeployment.enabled=true
 encoding=UTF-8
+config.resources=exercise1.xml,exercise2.xml,exercise3.xml,exercise4.xml
 domain=default
-config.resources=exercise1.xml,exercise2.xml,exercise3.xml
