--- a/src/main/app/mule-deploy.properties
+++ b/src/main/app/mule-deploy.properties
@@ -1,6 +1,6 @@
 #** GENERATED CONTENT ** Mule Application Deployment Descriptor
-#Mon Jan 22 11:21:05 CST 2018
+#Mon Jan 22 13:00:17 CST 2018
 redeployment.enabled=true
 encoding=UTF-8
-config.resources=exercise1.xml,exercise2.xml,exercise3.xml,exercise4.xml
+config.resources=exercise1.xml,exercise2.xml,exercise3.xml,exercise4.xml,exercise5.xml
 domain=default
