--- a/src/main/app/mule-deploy.properties
+++ b/src/main/app/mule-deploy.properties
@@ -1,6 +1,6 @@
 #** GENERATED CONTENT ** Mule Application Deployment Descriptor
-#Mon Jan 22 15:08:36 CST 2018
+#Mon Jan 22 15:41:37 CST 2018
 redeployment.enabled=true
 encoding=UTF-8
+config.resources=exercise1.xml,exercise2.xml,exercise3.xml,exercise4.xml,exercise5.xml,exercise6.xml,exercise7.xml
 domain=default
-config.resources=exercise1.xml,exercise2.xml,exercise3.xml,exercise4.xml,exercise5.xml,exercise6.xml
