--- a/src/main/app/mule-deploy.properties
+++ b/src/main/app/mule-deploy.properties
@@ -1,6 +1,6 @@
 #** GENERATED CONTENT ** Mule Application Deployment Descriptor
-#Mon Jan 22 17:39:10 CST 2018
+#Mon Jan 22 17:54:01 CST 2018
 redeployment.enabled=true
 encoding=UTF-8
-config.resources=exercise1.xml,exercise10.xml,exercise2.xml,exercise3.xml,exercise4.xml,exercise5.xml,exercise6.xml,exercise7.xml,exercise8.xml
 domain=default
+config.resources=exercise1.xml,exercise10.xml,exercise2.xml,exercise3.xml,exercise4.xml,exercise5.xml,exercise6.xml,exercise7.xml,exercise8.xml,exercise9.xml
