--- a/src/main/app/mule-deploy.properties
+++ b/src/main/app/mule-deploy.properties
@@ -1,6 +1,6 @@
 #** GENERATED CONTENT ** Mule Application Deployment Descriptor
-#Wed Jan 24 11:18:16 CST 2018
+#Wed Jan 24 13:31:26 CST 2018
 redeployment.enabled=true
 encoding=UTF-8
+config.resources=exercise1.xml,exercise10.xml,exercise11.xml,exercise12.xml,exercise13.xml,exercise14.xml,exercise15.xml,exercise2.xml,exercise3.xml,exercise4.xml,exercise5.xml,exercise6.xml,exercise7.xml,exercise8.xml,exercise9.xml
 domain=default
-config.resources=exercise1.xml,exercise10.xml,exercise11.xml,exercise12.xml,exercise13.xml,exercise14.xml,exercise2.xml,exercise3.xml,exercise4.xml,exercise5.xml,exercise6.xml,exercise7.xml,exercise8.xml,exercise9.xml
